<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <com.hippo.preference.ListPreference-->
<!--        android:defaultValue="0"-->
<!--        android:key="screen_rotation"-->
<!--        android:summary="%s"-->
<!--        android:title="@string/settings_read_picture_decoding_method"-->
<!--        app:allowDividerAbove="true"-->
<!--        app:entries="@array/picture_decoding_method"-->
<!--        app:entryValues="@array/picture_decoding_method_values" />-->

    <com.hippo.preference.ListPreference
        android:defaultValue="0"
        android:key="screen_rotation"
        android:summary="%s"
        android:title="@string/settings_read_screen_rotation"
        app:allowDividerAbove="true"
        app:entries="@array/screen_rotation_entries"
        app:entryValues="@array/screen_rotation_entry_values" />

    <com.hippo.preference.ListPreference
        android:defaultValue="1"
        android:key="reading_direction"
        android:summary="%s"
        android:title="@string/settings_read_reading_direction"
        app:allowDividerAbove="true"
        app:entries="@array/reading_direction_entries"
        app:entryValues="@array/reading_direction_entry_values" />

    <com.hippo.preference.ListPreference
        android:defaultValue="3"
        android:key="page_scaling"
        android:summary="%s"
        android:title="@string/settings_read_page_scaling"
        app:allowDividerAbove="true"
        app:entries="@array/page_scaling_entries"
        app:entryValues="@array/page_scaling_entry_values" />

    <com.hippo.preference.ListPreference
        android:defaultValue="1"
        android:key="start_position"
        android:summary="%s"
        android:title="@string/settings_read_start_position"
        app:allowDividerAbove="true"
        app:entries="@array/start_position_entries"
        app:entryValues="@array/start_position_values" />

    <com.hippo.ehviewer.preference.StartTransferTimePreference
        android:key="start_transfer_time"
        android:title="@string/settings_read_auto_transfer_time"
        app:allowDividerAbove="true" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="gallery_direct_save"
        android:title="@string/settings_read_direct_save" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="gallery_quick_save_turn_page"
        android:title="@string/settings_read_long_press_save_turn_page" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="gallery_quick_page_turn"
        android:title="@string/settings_read_quick_page_turn" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="keep_screen_on"
        android:title="@string/settings_read_keep_screen_on" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:key="gallery_show_clock"
        android:title="@string/settings_read_show_clock" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:key="gallery_show_progress"
        android:title="@string/settings_read_show_progress" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:key="gallery_show_battery"
        android:title="@string/settings_read_show_battery" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:key="gallery_show_page_interval"
        android:title="@string/settings_read_show_page_interval" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="volume_page"
        android:title="@string/settings_read_volume_page" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="reverse_volume_page"
        android:title="@string/settings_read_reverse_volume_page" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:key="reading_fullscreen"
        android:title="@string/settings_read_reading_fullscreen" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="custom_screen_lightness"
        android:title="@string/settings_read_custom_screen_lightness" />

    <com.hippo.preference.SeekBarPreference
        android:defaultValue="50"
        android:dependency="custom_screen_lightness"
        android:key="screen_lightness"
        android:title="@string/settings_read_screen_lightness"
        app:max="200" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:key="experimental_animated_webp"
        android:title="@string/settings_animated_webp_controls"
        app:allowDividerAbove="true" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:dependency="experimental_animated_webp"
        android:key="animated_webp_show_time"
        android:title="@string/settings_animated_webp_playback_time"
        app:iconSpaceReserved="true" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="true"
        android:dependency="experimental_animated_webp"
        android:key="animated_webp_allow_seek"
        android:title="@string/settings_animated_webp_progress_control"
        app:iconSpaceReserved="true" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:dependency="experimental_animated_webp"
        android:key="animated_webp_auto_advance"
        android:title="@string/settings_animated_webp_sequential_playback"
        app:iconSpaceReserved="true" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:dependency="experimental_animated_webp"
        android:key="animated_webp_auto_transfer_button"
        android:title="@string/settings_animated_webp_auto_transfer_button"
        app:iconSpaceReserved="true" />

    <androidx.preference.EditTextPreference
        android:defaultValue="2.0"
        android:dependency="experimental_animated_webp"
        android:key="animated_webp_long_press_speed"
        android:title="@string/settings_animated_webp_long_press_speed"
        app:iconSpaceReserved="true" />

</PreferenceScreen>
