<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Hippo Seven
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all_labels"
        android:icon="@drawable/v_check_all_dark_x24"
        android:title="@string/select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_select_label_range"
        android:icon="@drawable/v_select_range_dark_x24"
        android:title="@string/select_label_range"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/v_plus_dark_x24"
        android:title="@string/add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete_empty_labels"
        android:icon="@drawable/v_folder_zero_delete_dark_x24"
        android:title="@string/download_delete_empty_labels"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_classify_selected_labels"
        android:icon="@drawable/v_sort_selected_dark_x24"
        android:title="@string/classify_selected_labels"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_selected_labels"
        android:icon="@drawable/v_delete_dark_x24"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel_label_selection"
        android:icon="@drawable/v_return_curve_dark_x24"
        android:title="@string/cancel_label_selection"
        android:visible="false"
        app:showAsAction="always" />

</menu>
